package org.tallerJava.moduloCargas.dominio;

public enum EstadoCarga {
    ACTIVA,
    FINALIZADA,
    CANCELADA
}
