package org.tallerJava.moduloCargas.dominio;

public enum EstadoCargador {
    DISPONIBLE,
    OCUPADO,
    FUERA_SERVICIO
}
