package org.tallerJava.moduloCargas.dominio;

public enum TipoCargador {
    LENTO,
    RAPIDO
}
