package org.tallerJava.moduloCargas.dominio;

public enum TipoConector {
    TIPO1,
    TIPO2,
    CCS,
    CHADEMO
}
