package org.tallerJava.moduloClientes.dominio;

public enum TipoProfesional {
    TAXI,
    UBER,
    CABIFY
}
