package org.tallerJava.moduloClientes.dominio;

public enum TipoTarjeta {
    CREDITO,
    DEBITO
}
